Add task_3 random_seed

--- a/task_3/task_3.ipynb
+++ b/task_3/task_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,18 @@
     "# 1. Set `PYTHONHASHSEED` environment variable at a fixed value\n",
     "import os\n",
     "os.environ['PYTHONHASHSEED']=str(seed_value)\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
     "\n",
     "# 2. Set `python` built-in pseudo-random generator at a fixed value\n",
     "import random\n",
     "random.seed(seed_value)\n",
     "\n",
     "# 3. Set `numpy` pseudo-random generator at a fixed value\n",
-    "np.random.seed(1337)\n",
+    "np.random.seed(seed_value)\n",
     "\n",
     "# 4. Set the `tensorflow` pseudo-random generator at a fixed value\n",
-    "tf.random.set_seed(1337)\n",
+    "tf.random.set_seed(seed_value)\n",
     "\n",
     "# 5. Configure a new global `tensorflow` session\n",
     "# for later versions:\n",
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +496,7 @@
     "X = enc.transform(X_df).toarray()\n",
     "y = train_data[\"Active\"].values\n",
     "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.02, random_state=1337, stratify=y)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.02, random_state=seed_value, stratify=y)\n",
     "\n",
     "# Create training np arrays\n",
     "#X_train = enc.transform(X_df).toarray().reshape(-1, 4, 20)\n",
@@ -503,17 +505,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras import backend as K\n",
     "\n",
@@ -537,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -545,120 +539,91 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0755 - f1_m: 0.4578 - val_loss: 0.0398 - val_f1_m: 0.7771\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0750 - f1_m: 0.4572 - val_loss: 0.0416 - val_f1_m: 0.7594\n",
       "Epoch 2/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0388 - f1_m: 0.7537 - val_loss: 0.0226 - val_f1_m: 0.8394\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0391 - f1_m: 0.7525 - val_loss: 0.0236 - val_f1_m: 0.8024\n",
       "Epoch 3/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0296 - f1_m: 0.8076 - val_loss: 0.0180 - val_f1_m: 0.9118\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0302 - f1_m: 0.8119 - val_loss: 0.0212 - val_f1_m: 0.8434\n",
       "Epoch 4/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0256 - f1_m: 0.8393 - val_loss: 0.0173 - val_f1_m: 0.9096\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0260 - f1_m: 0.8372 - val_loss: 0.0202 - val_f1_m: 0.8632\n",
       "Epoch 5/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0222 - f1_m: 0.8602 - val_loss: 0.0136 - val_f1_m: 0.9279\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0233 - f1_m: 0.8603 - val_loss: 0.0165 - val_f1_m: 0.9006\n",
       "Epoch 6/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0201 - f1_m: 0.8705 - val_loss: 0.0131 - val_f1_m: 0.9163\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0209 - f1_m: 0.8673 - val_loss: 0.0166 - val_f1_m: 0.8935\n",
       "Epoch 7/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0184 - f1_m: 0.8814 - val_loss: 0.0155 - val_f1_m: 0.9216\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0194 - f1_m: 0.8801 - val_loss: 0.0171 - val_f1_m: 0.8762\n",
       "Epoch 8/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0165 - f1_m: 0.8907 - val_loss: 0.0157 - val_f1_m: 0.8942\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0178 - f1_m: 0.8805 - val_loss: 0.0179 - val_f1_m: 0.9181\n",
       "Epoch 9/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0158 - f1_m: 0.8942 - val_loss: 0.0122 - val_f1_m: 0.9438\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0159 - f1_m: 0.8927 - val_loss: 0.0165 - val_f1_m: 0.8938\n",
       "Epoch 10/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0152 - f1_m: 0.9024 - val_loss: 0.0148 - val_f1_m: 0.8903\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0150 - f1_m: 0.8968 - val_loss: 0.0141 - val_f1_m: 0.9176\n",
       "Epoch 11/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0145 - f1_m: 0.9015 - val_loss: 0.0116 - val_f1_m: 0.9168\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0143 - f1_m: 0.9053 - val_loss: 0.0140 - val_f1_m: 0.9296\n",
       "Epoch 12/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0136 - f1_m: 0.9159 - val_loss: 0.0117 - val_f1_m: 0.9326\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0140 - f1_m: 0.9125 - val_loss: 0.0157 - val_f1_m: 0.9230\n",
       "Epoch 13/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0131 - f1_m: 0.9138 - val_loss: 0.0111 - val_f1_m: 0.9360\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0130 - f1_m: 0.9161 - val_loss: 0.0129 - val_f1_m: 0.9172\n",
       "Epoch 14/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0120 - f1_m: 0.9228 - val_loss: 0.0128 - val_f1_m: 0.9210\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0125 - f1_m: 0.9208 - val_loss: 0.0129 - val_f1_m: 0.9371\n",
       "Epoch 15/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0117 - f1_m: 0.9251 - val_loss: 0.0105 - val_f1_m: 0.9261\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0120 - f1_m: 0.9220 - val_loss: 0.0150 - val_f1_m: 0.9087\n",
       "Epoch 16/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0110 - f1_m: 0.9251 - val_loss: 0.0158 - val_f1_m: 0.9022\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0115 - f1_m: 0.9254 - val_loss: 0.0109 - val_f1_m: 0.9236\n",
       "Epoch 17/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0112 - f1_m: 0.9260 - val_loss: 0.0137 - val_f1_m: 0.9290\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0112 - f1_m: 0.9244 - val_loss: 0.0127 - val_f1_m: 0.9174\n",
       "Epoch 18/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0101 - f1_m: 0.9332 - val_loss: 0.0141 - val_f1_m: 0.9161\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0106 - f1_m: 0.9286 - val_loss: 0.0103 - val_f1_m: 0.9303\n",
       "Epoch 19/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0104 - f1_m: 0.9293 - val_loss: 0.0140 - val_f1_m: 0.9275\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0106 - f1_m: 0.9343 - val_loss: 0.0120 - val_f1_m: 0.9292\n",
       "Epoch 20/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0098 - f1_m: 0.9305 - val_loss: 0.0114 - val_f1_m: 0.9273\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0103 - f1_m: 0.9352 - val_loss: 0.0138 - val_f1_m: 0.9181\n",
       "Epoch 21/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0096 - f1_m: 0.9352 - val_loss: 0.0133 - val_f1_m: 0.9053\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0096 - f1_m: 0.9386 - val_loss: 0.0125 - val_f1_m: 0.9243\n",
       "Epoch 22/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0093 - f1_m: 0.9397 - val_loss: 0.0136 - val_f1_m: 0.9207\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0087 - f1_m: 0.9444 - val_loss: 0.0132 - val_f1_m: 0.9116\n",
       "Epoch 23/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0090 - f1_m: 0.9416 - val_loss: 0.0118 - val_f1_m: 0.9241\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0088 - f1_m: 0.9435 - val_loss: 0.0108 - val_f1_m: 0.9081\n",
       "Epoch 24/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0087 - f1_m: 0.9434 - val_loss: 0.0123 - val_f1_m: 0.9304\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0088 - f1_m: 0.9439 - val_loss: 0.0107 - val_f1_m: 0.9083\n",
       "Epoch 25/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0085 - f1_m: 0.9436 - val_loss: 0.0119 - val_f1_m: 0.9324\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0083 - f1_m: 0.9460 - val_loss: 0.0111 - val_f1_m: 0.9188\n",
       "Epoch 26/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0081 - f1_m: 0.9476 - val_loss: 0.0145 - val_f1_m: 0.9278\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0081 - f1_m: 0.9467 - val_loss: 0.0151 - val_f1_m: 0.9275\n",
       "Epoch 27/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0077 - f1_m: 0.9458 - val_loss: 0.0153 - val_f1_m: 0.9162\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0080 - f1_m: 0.9452 - val_loss: 0.0134 - val_f1_m: 0.9309\n",
       "Epoch 28/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0078 - f1_m: 0.9487 - val_loss: 0.0176 - val_f1_m: 0.8933\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0077 - f1_m: 0.9508 - val_loss: 0.0171 - val_f1_m: 0.9015\n",
       "Epoch 29/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0075 - f1_m: 0.9500 - val_loss: 0.0136 - val_f1_m: 0.9285\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0079 - f1_m: 0.9445 - val_loss: 0.0113 - val_f1_m: 0.9261\n",
       "Epoch 30/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0072 - f1_m: 0.9457 - val_loss: 0.0164 - val_f1_m: 0.9069\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0076 - f1_m: 0.9491 - val_loss: 0.0122 - val_f1_m: 0.9488\n",
       "Epoch 31/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0075 - f1_m: 0.9521 - val_loss: 0.0154 - val_f1_m: 0.8967\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0072 - f1_m: 0.9535 - val_loss: 0.0111 - val_f1_m: 0.9357\n",
       "Epoch 32/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0077 - f1_m: 0.9436 - val_loss: 0.0124 - val_f1_m: 0.9155\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0075 - f1_m: 0.9426 - val_loss: 0.0091 - val_f1_m: 0.9157\n",
       "Epoch 33/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0067 - f1_m: 0.9463 - val_loss: 0.0132 - val_f1_m: 0.9351\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0073 - f1_m: 0.9422 - val_loss: 0.0109 - val_f1_m: 0.9281\n",
       "Epoch 34/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0066 - f1_m: 0.9580 - val_loss: 0.0131 - val_f1_m: 0.9016\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0067 - f1_m: 0.9559 - val_loss: 0.0114 - val_f1_m: 0.9324\n",
       "Epoch 35/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0069 - f1_m: 0.9490 - val_loss: 0.0126 - val_f1_m: 0.8989\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0067 - f1_m: 0.9531 - val_loss: 0.0116 - val_f1_m: 0.9237\n",
       "Epoch 36/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0066 - f1_m: 0.9551 - val_loss: 0.0140 - val_f1_m: 0.8973\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0064 - f1_m: 0.9616 - val_loss: 0.0126 - val_f1_m: 0.9334\n",
       "Epoch 37/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0062 - f1_m: 0.9545 - val_loss: 0.0117 - val_f1_m: 0.9381\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0059 - f1_m: 0.9545 - val_loss: 0.0120 - val_f1_m: 0.9243\n",
       "Epoch 38/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0066 - f1_m: 0.9464 - val_loss: 0.0129 - val_f1_m: 0.9126\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0067 - f1_m: 0.9489 - val_loss: 0.0110 - val_f1_m: 0.9315\n",
       "Epoch 39/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0058 - f1_m: 0.9652 - val_loss: 0.0162 - val_f1_m: 0.9049\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0061 - f1_m: 0.9634 - val_loss: 0.0116 - val_f1_m: 0.9323\n",
       "Epoch 40/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0057 - f1_m: 0.9599 - val_loss: 0.0130 - val_f1_m: 0.9216\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0060 - f1_m: 0.9563 - val_loss: 0.0108 - val_f1_m: 0.9202\n",
       "Epoch 41/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0057 - f1_m: 0.9584 - val_loss: 0.0123 - val_f1_m: 0.9261\n",
+      "858/858 [==============================] - 2s 3ms/step - loss: 0.0063 - f1_m: 0.9559 - val_loss: 0.0131 - val_f1_m: 0.9280\n",
       "Epoch 42/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0057 - f1_m: 0.9622 - val_loss: 0.0176 - val_f1_m: 0.9080\n",
+      "858/858 [==============================] - 3s 3ms/step - loss: 0.0059 - f1_m: 0.9628 - val_loss: 0.0112 - val_f1_m: 0.9176\n",
       "Epoch 43/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0060 - f1_m: 0.9605 - val_loss: 0.0141 - val_f1_m: 0.9279\n",
-      "Epoch 44/45\n",
-      "858/858 [==============================] - 3s 3ms/step - loss: 0.0060 - f1_m: 0.9563 - val_loss: 0.0135 - val_f1_m: 0.9309\n",
-      "Epoch 45/45\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0056 - f1_m: 0.9632 - val_loss: 0.0139 - val_f1_m: 0.9290\n",
-      "WARNING:tensorflow:From C:\\Users\\David\\Anaconda3\\envs\\iml\\lib\\site-packages\\tensorflow\\python\\ops\\resource_variable_ops.py:1813: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "INFO:tensorflow:Assets written to: model\\assets\n",
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense (Dense)                multiple                  16200     \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            multiple                  0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              multiple                  14070     \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          multiple                  0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              multiple                  2130      \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              multiple                  31        \n",
-      "=================================================================\n",
-      "Total params: 32,431\n",
-      "Trainable params: 32,431\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "None\n"
+      "576/858 [===================>..........] - ETA: 0s - loss: 0.0052 - f1_m: 0.9676"
      ]
     }
    ],
@@ -677,9 +642,9 @@
     "model = Sequential()\n",
     "#model.add(Bidirectional(GRU(20, input_shape=(4, 20))))\n",
     "model.add(Dense(200, activation = 'relu'))\n",
-    "model.add(Dropout(0.3, seed=1337))\n",
+    "model.add(Dropout(0.3, seed=seed_value))\n",
     "model.add(Dense(70, activation = 'relu'))\n",
-    "model.add(Dropout(0.2, seed=1337))\n",
+    "model.add(Dropout(0.2, seed=seed_value))\n",
     "model.add(Dense(30, activation = 'relu'))\n",
     "model.add(Dense(1, activation = 'sigmoid'))\n",
     "optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
@@ -696,20 +661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9333333333333332"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score\n",
     "y_pred = np.around(model.predict(X_val))\n",
