--- a/task_1a/task_1a.ipynb
+++ b/task_1a/task_1a.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -397,32 +397,32 @@
     "class RidgeTraining:\n",
     "    \n",
     "    @staticmethod\n",
-    "    def start(X, y, reg_alpha, k):\n",
+    "    def start(X, y, reg_alpha, k, random_state):\n",
     "        \"\"\"Train a ridge regression model on the supplied data (X, y)\"\"\"\n",
     "        # Model\n",
     "        model = Ridge(alpha=reg_alpha)\n",
     "        \n",
     "        cv_results = cross_validate(model, X, y, \n",
-    "                                    cv=KFold(n_splits=k, shuffle=True),\n",
+    "                                    cv=KFold(n_splits=k, shuffle=True, random_state=random_state),\n",
     "                                    scoring=('neg_mean_squared_error'))  \n",
     "        return np.sqrt(-(cv_results['test_score']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train k models from on the train folds, validate on validation fold\n",
     "\n",
-    "def get_scores():\n",
+    "def get_scores(i=0):\n",
     "    # Array of the RMSE for each regularization parameter\n",
     "    res_rmse = []\n",
     "\n",
     "    for reg_lambda in lambdas:\n",
     "        # Perform the cross validation training\n",
-    "        val_folds_rmse = RidgeTraining.start(X, y, reg_lambda, k)\n",
+    "        val_folds_rmse = RidgeTraining.start(X, y, reg_lambda, k, i)\n",
     "\n",
     "        # Root mean squared error accumulated over k folds\n",
     "        rmse = np.sum(val_folds_rmse) / k\n",
@@ -435,20 +435,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4.807854695860909,\n",
-       " 4.716541949480812,\n",
-       " 4.8213851899610525,\n",
-       " 4.868712305766519,\n",
-       " 5.008551798418932]"
+       "[4.804908624967248,\n",
+       " 4.802214486786927,\n",
+       " 4.80416409901698,\n",
+       " 4.851784345683722,\n",
+       " 4.964394876805956]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,21 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [11:01<00:00, 15.12it/s]"
+      "100%|██████████| 10000/10000 [08:21<00:00, 19.96it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.80552433 4.80505721 4.81743581 4.87136873 4.97472616]\n"
+      "[4.80531341 4.80480721 4.81752789 4.87170078 4.97422208]\n"
      ]
     },
     {
@@ -490,10 +492,20 @@
     "n_iter = 10000\n",
     "res = np.zeros(5)\n",
     "\n",
-    "for _ in tqdm(range(n_iter)):\n",
-    "    res += get_scores()\n",
+    "for i in tqdm(range(n_iter)):\n",
+    "    res += get_scores(i+1)\n",
     "    \n",
     "print(res/n_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the result f\n",
+    "np.savetxt('submission.csv', res/n_iter, fmt=\"%f\")"
    ]
   },
   {
@@ -520,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
