--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -355,6 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Start the ridge regression training\n",
     "reg = Ridge(alpha=100, fit_intercept=False).fit(X, y)"
    ]
   },
@@ -387,6 +388,7 @@
     }
    ],
    "source": [
+    "# Print the results\n",
     "display(reg.coef_)\n",
     "display(reg.score(X, y))"
    ]
@@ -397,6 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the results for submission\n",
     "np.savetxt('submission.csv', reg.coef_, delimiter='\\n', fmt=\"%.12f\")"
    ]
   },
@@ -424,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
