--- a/task_2/task_2.ipynb
+++ b/task_2/task_2.ipynb
@@ -49505,7 +49505,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Saving the trained models"
+    "# Saving the trained models\n",
+    "\n",
+    "**IMPORTANT NOTE**: Regarding the reproducibility of our results, the `random_state` of sklearn has been set for every call / object that has this attribute as well as `np.random.seed(1337)` in the first cell. However, we can't reproduce the *exact* results over multiple runs of our notebook. For this reason, we have decided to save the model with our last submission that almost achieves the hard baseline. This model has 1.1GiB in size and we can upload it on demand to e.g. GitHub or anywhere requested. Below is the code used for the saving/loading"
    ]
   },
   {
@@ -49558,7 +49560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
